# RedGuard-Suite

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
ai/: AI_CONTEXT.md
configs/: config.public.example.json
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md  attack_mapping.md  development_setup.md  module_development_guide.md  risk_matrix_schema.md  roadmap.md  roe_template.md
docs/playbooks/: README.md  deconfliction_guide.md  evidence_handling.md  incident_response.md  legal_compliance_checklist.md  operational_security.md
docs/research/: README.md  executive_validation.md  garak_integration_plan.md  initial_design.md  landscape_2026.md  learning_roadmap.md  modern_red_team_practices.md  tooling_reference.md
scripts/: generate_sbom.sh  run_checks.sh
src/redguard/: __init__.py  cli.py  orchestrator.py
src/redguard/modules/: __init__.py  llm_garak.py  recon.py  report.py  scan.py
tests/: conftest.py  test_orchestrator.py
tests/modules/: test_recon.py  test_report.py
